add indication to supplier rate in case it has an end date-request
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43180

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteDetailTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteDetailTemplate.html
@@ -16,7 +16,9 @@
                      defaultsortbyfieldname="'OptionOrder'"
                      getrowstyle="getRowStyle">
 
-            <vr-datagridcolumn headertext="'Supplier'" type="'Text'" field="'SupplierName'" isclickable="'true'" onclicked="openRouteOptionSupplier" widthfactor="3"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Supplier'" type="'Text'" widthfactor="3">
+                <a style="font-size: 11px; cursor: pointer; display: inline-block; text-align: right; padding: 0 10px 0 0;" ng-click="viewScope.openRouteOptionSupplier(dataItem)">{{dataItem.SupplierName}}<span style="color:#FFA500; font-weight:bold;" ng-if="dataItem.Entity.SupplierZoneMatchHasClosedRate">*</span></a>
+            </vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Status'" type="'Text'" field="'SupplierStatus'" widthfactor="1"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Supplier Rate'" type="'Number'" field="'Entity.SupplierRate'" numberprecision="'LongPrecision'" widthfactor="3"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Percentage'" type="'Number'" field="'Entity.Percentage'" widthfactor="3"></vr-datagridcolumn>
