--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteOptionGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteOptionGridTemplate.html
@@ -12,5 +12,6 @@
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Blocked'" field="'Entity.IsBlocked'" type="'Text'" widthfactor="1" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate'" field="'ConvertedSupplierRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="1" disablesorting></vr-datagridcolumn>
-
+    <vr-datagridcolumn headertext="'Rate EED'" field="'RateEED'" type="'LongDatetime'" fixedwidth="'120'" disablesorting></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Future Rate'" field="'FutureRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="1" disablesorting></vr-datagridcolumn>
 </vr-datagrid>
