Implement priclist template selector in sale pricelist preview and add functions for all pricing settings and pricelist setting properties
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43181

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
@@ -72,9 +72,17 @@
                     <vr-row>
                         <vr-whs-be-salepricelisttype-selector on-ready="onPriceListTypeSelectorReady"
                                                               normal-col-num="6"
-                                                              isrequired="true">
+                                                              isrequired="true"
+                                                              hideremoveicon="true">
                         </vr-whs-be-salepricelisttype-selector>
                         <vr-switch value="scopeModel.compressPriceListFile" label="Compressed Pricelist File"></vr-switch>
+                    </vr-row>
+                    <vr-row vr-loader="isLoadingPricelistTemplateSelector">
+                        <vr-whs-be-salepricelisttemplate-selector on-ready="onPricelistTemplateSelectorReady"
+                                                                  normal-col-num="6"
+                                                                  isrequired="true"
+                                                                  hideremoveicon="true">
+                        </vr-whs-be-salepricelisttemplate-selector>
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
