--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/QueueActivators/Directives/Templates/QueueActivatorUpdateWhSBalancesTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/QueueActivators/Directives/Templates/QueueActivatorUpdateWhSBalancesTemplate.html
@@ -1,5 +1,10 @@
-﻿<vr-columns width="fullrow">
+﻿<vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onCustomerUsageTransactionTypeReady"
+                                                   normal-col-num="4" customlabel="Customer Usage Transaction Type" isrequired="true">
+</vr-accountbalance-billingtransactiontype-selector>
+<vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onSupplierUsageTransactionTypeReady"
+                                                   normal-col-num="4" customlabel="Supplier Usage Transaction Type" isrequired="true">
+</vr-accountbalance-billingtransactiontype-selector>
+<vr-columns width="fullrow">
     <vr-accountbalance-updateaccountbalancesettings on-ready="scopeModel.onUpdateAccountBalanceSettingsDirectiveReady"></vr-accountbalance-updateaccountbalancesettings>
 </vr-columns>
-<vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onCustomerUsageTransactionTypeReady" isrequired="true" customlabel="Customer Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
-<vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onSupplierUsageTransactionTypeReady" isrequired="true" customlabel="Supplier Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
+
