Added the ApplyCorrectedData method to BulkActions and implemented it on the RateBulkAction
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43184

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
@@ -10,6 +10,14 @@
                              maxheight="100px"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
+                        <vr-textbox type="number"
+                                    value="dataItem.correctedRate"
+                                    decimalprecision="{{viewScope.scopeModel.longPrecision}}"
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                        </vr-textbox>
+                    </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
@@ -25,6 +33,14 @@
                              maxheight="100px"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
+                        <vr-textbox type="number"
+                                    value="dataItem.correctedRate"
+                                    decimalprecision="{{viewScope.scopeModel.longPrecision}}"
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                        </vr-textbox>
+                    </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
@@ -40,8 +56,16 @@
                              maxheight="100px"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Calculated Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create padding between the Rate column and the edge of the grid -->
+                    <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
+                        <vr-textbox type="number"
+                                    value="dataItem.correctedRate"
+                                    decimalprecision="{{viewScope.scopeModel.longPrecision}}"
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                        </vr-textbox>
+                    </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
@@ -57,8 +81,15 @@
                              maxheight="100px"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Calculated Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create padding between the Rate column and the edge of the grid -->
+                    <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
+                        <vr-textbox type="number"
+                                    value="dataItem.correctedRate"
+                                    decimalprecision="{{viewScope.scopeModel.longPrecision}}"
+                                    customvalidate="viewScope.scopeModel.validateCorrectedRate(dataItem)">
+                        </vr-textbox>
+                    </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
