Implementing TelesIdbSWSync UI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43210

--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/SwitchRouteSynchronizer/Templates/SwitchRouteSynchronizerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/SwitchRouteSynchronizer/Templates/SwitchRouteSynchronizerTemplate.html
@@ -11,7 +11,6 @@
         </vr-select>
     </vr-columns>
 </vr-row>
-
-<vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor"
+<vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor" vr-loader="scopeModel.isLoadingDirective"
                      on-ready="scopeModel.onDirectiveReady" isrequired="ctrl.isrequired" normal-col-num="{{ctrl.normalColNum}}" customvalidate="ctrl.customvalidate">
 </vr-directivewrapper>
