--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/StyleDefinition/Templates/StyleDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/StyleDefinition/Templates/StyleDefinitionGridTemplate.html
@@ -1,11 +1,10 @@
-﻿
-
-<vr-datagrid on-ready="scopeModel.onGridReady"
+﻿<vr-datagrid on-ready="scopeModel.onGridReady"
              datasource="scopeModel.styleDefinition"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="scopeModel.menuActions"
              idfield="Entity.StyleDefinitionId">
+
     <vr-datagridcolumn headertext="'Id'" field="'Entity.StyleDefinitionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
