Implementing provisioning for multinet
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43212

--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ChangeUsersRGs/Templates/ChangeUsersRGsProvisionerDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ChangeUsersRGs/Templates/ChangeUsersRGsProvisionerDefinitionSettingsTemplate.html
@@ -17,6 +17,10 @@
                                     normal-col-num="6"
                                     isrequired="true">
     </retail-be-accounttype-selector>
+    <retail-be-accounttype-selector on-ready="scopeModel.onUserAccountTypeSelectorReady"
+                                    customlabel="User Account Type"
+                                    normal-col-num="6">
+    </retail-be-accounttype-selector>
 </vr-row>
 <vr-row>
     <vr-section title="Existing Routing Group Condition">
