--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountCondition/Templates/TelesAccountConditionTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountCondition/Templates/TelesAccountConditionTemplate.html
@@ -24,6 +24,5 @@
 </retail-be-accounttype-selector>
 <retail-be-accounttype-selector on-ready="scopeModel.onUserAccountTypeSelectorReady"
                                 customlabel="User Account Type"
-                                normal-col-num="3"
-                                isrequired="true">
+                                normal-col-num="3">
 </retail-be-accounttype-selector>
