--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionUserDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionUserDefinitionSettingsTemplate.html
@@ -1,22 +1,23 @@
 ﻿<vr-row>
     <vr-common-connection-selector on-ready="scopeModel.onConectionTypeReady" normal-col-num="4" isrequired="true"></vr-common-connection-selector>
-
     <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.actionType" label="Action Type" isrequired="true"></vr-textbox>
+        <vr-textbox value="scopeModel.countryCode" label="Country Code" isrequired="true"></vr-textbox>
     </vr-columns>
-
     <retail-be-accounttype-selector on-ready="scopeModel.onCompanyAccountTypeSelectorReady"
-                                    normal-col-num="6"
+                                    normal-col-num="4"
                                     customlabel="Company Account Type"
                                     isrequired="true">
     </retail-be-accounttype-selector>
     <retail-be-accounttype-selector on-ready="scopeModel.onSiteAccountTypeSelectorReady"
                                     customlabel="Site Account Type"
-                                    normal-col-num="6"
+                                    normal-col-num="4"
                                     isrequired="true">
     </retail-be-accounttype-selector>
     <retail-be-accounttype-selector on-ready="scopeModel.onUserAccountTypeSelectorReady"
                                     customlabel="User Account Type"
-                                    normal-col-num="6">
+                                    normal-col-num="4"
+                                    isrequired="true">
     </retail-be-accounttype-selector>
 </vr-row>
+<retail-teles-provisioner-provisionuser-settings on-ready="scopeModel.onProvisionUserSettingsReady"></retail-teles-provisioner-provisionuser-settings>
+
