--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/OtherSaleRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/OtherSaleRateGridTemplate.html
@@ -1,7 +1,7 @@
 ﻿<vr-datagrid on-ready="scopeModel.onGridReady" datasource="scopeModel.otherSaleRates" idfield="Entity.SaleRateId" hidegridmenu>
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="3"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Rate'" field="'DisplayedRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="3"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'DisplayedCurrency'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate Type'" field="'RateTypeName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
