--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/SaleRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/SaleRateGridTemplate.html
@@ -7,14 +7,14 @@
                  idfield="Entity.SaleRateId"
                  enableautoexport="true">
         <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="5"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Rate'" field="'DisplayedRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="5"></vr-datagridcolumn>
         <vr-datagridcolumn fixedwidth="'35'" headertext="'Rate Change'" invisibleheader>
             <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIcon" tooltip="dataItem.RateChangeTypeIconTooltip" inline></vr-icon>
         </vr-datagridcolumn>
         <vr-datagridcolumn widthfactor="5" headertext="'Rate Inherited'" invisibleheader>
             <vr-icon icontype="dataItem.iconType" tooltip="dataItem.iconTooltip"></vr-icon>
         </vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Currency'" field="'DisplayedCurrency'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
         <vr-datagridexpandablerow>
