--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleRate/SaleRateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleRate/SaleRateManagement.html
@@ -45,6 +45,9 @@
                 <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="Effective On" value="effectiveOn" isrequired></vr-datetimepicker>
                 </vr-columns>
+                <vr-columns width="normal">
+                    <vr-switch  label="Show In System Currency" value="isSystemCurrency" ></vr-switch>
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
