Rate Plan- Bulk changes - Apply on Rates =>User stories Validation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43215

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ActionTypes/Templates/RateBulkActionTypeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ActionTypes/Templates/RateBulkActionTypeTemplate.html
@@ -25,7 +25,7 @@
             <vr-datetimepicker type="date" label="BED" value="scopeModel.beginEffectiveDate" onvaluechanged="scopeModel.onBulkActionChanged"></vr-datetimepicker>
         </vr-columns>
         <vr-columns colnum="{{rateBulkActionTypeCtrl.normalColNum}}" ng-show="scopeModel.showRateSource">
-            <vr-whs-sales-ratesource-selector ismultipleselection on-ready="scopeModel.onRateSourceSelectorReady"></vr-whs-sales-ratesource-selector>
+            <vr-whs-sales-ratesource-selector customelabel="Apply on Rates" ismultipleselection on-ready="scopeModel.onRateSourceSelectorReady"></vr-whs-sales-ratesource-selector>
         </vr-columns>
     </div>
 </div>
