--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionAccountSettingsTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionAccountSettingsTemplate.html
@@ -7,49 +7,49 @@
     <vr-tabs>
         <vr-tab header="'Enterprise Settings'" ng-if="scopeModel.showEnterpriseSettings">
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxCalls" label="Max Calls" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxCalls" label="Max Calls" isrequired="true" type="number" minvalue="0" maxvalue="200"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxCallsPerUser" label="Max Calls Per User" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxCallsPerUser" label="Max Calls Per User" isrequired="true" type="number" minvalue="0" maxvalue="3"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxRegistrations" label="Max Registrations" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxRegistrations" label="Max Registrations" isrequired="true" type="number" minvalue="0" maxvalue="3000"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxRegsPerUser" label="Max Regs Per User" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxRegsPerUser" label="Max Regs Per User" isrequired="true" type="number" minvalue="0" maxvalue="3"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxSubsPerUser" label="Max Subs Per User" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxSubsPerUser" label="Max Subs Per User" isrequired="true" type="number" minvalue="0" maxvalue="5"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxBusinessTrunkCalls" label="Max Business Trunk Calls" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxBusinessTrunkCalls" label="Max Business Trunk Calls" isrequired="true" type="number" minvalue="0" maxvalue="200"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.enterpriseMaxUsers" label="Max Users" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.enterpriseMaxUsers" label="Max Users" isrequired="true" type="number" minvalue="0" maxvalue="1000"></vr-textbox>
             </vr-columns>
 
         </vr-tab>
         <vr-tab header="'Site Settings'">
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxCalls" label="Max Calls" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxCalls" label="Max Calls" isrequired="true" type="number" minvalue="0" maxvalue="10"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxCallsPerUser" label="Max Calls Per User" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxCallsPerUser" label="Max Calls Per User" isrequired="true" type="number" minvalue="0" maxvalue="10"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxRegistrations" label="Max Registrations" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxRegistrations" label="Max Registrations" isrequired="true" type="number" minvalue="0" maxvalue="10"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxRegsPerUser" label="Max Regs Per User" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxRegsPerUser" label="Max Regs Per User" isrequired="true" type="number" minvalue="0" maxvalue="10"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxSubsPerUser" label="Max Subs Per User" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxSubsPerUser" label="Max Subs Per User" isrequired="true" type="number" minvalue="0" maxvalue="3"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxBusinessTrunkCalls" label="Max Business Trunk Calls" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxBusinessTrunkCalls" label="Max Business Trunk Calls" isrequired="true" type="number" minvalue="0" maxvalue="10"></vr-textbox>
             </vr-columns>
             <vr-columns width="1/3row">
-                <vr-textbox value="scopeModel.siteMaxUsers" label="Max Users" isrequired="true" type="number"></vr-textbox>
+                <vr-textbox value="scopeModel.siteMaxUsers" label="Max Users" isrequired="true" type="number" minvalue="0" maxvalue="21"></vr-textbox>
             </vr-columns>
         </vr-tab>
     </vr-tabs>
