change Percentage Value from decimal to integer in routing processes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43219

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleFixedDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleFixedDirective.html
@@ -17,7 +17,7 @@
                     <vr-datagridcolumn headertext="'Suppliers'" field="'Name'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Percentage'">
                         <!--isrequired="viewScope.scopeModel.isrequired"-->
-                        <vr-textbox value="dataItem.PercentageValue" type="number" minvalue="0" maxvalue=" 100"></vr-textbox>
+                        <vr-textbox value="dataItem.PercentageValue" decimalprecision="0" type="number" minvalue="0" maxvalue=" 100"></vr-textbox>
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Remove Loss'">
                         <vr-switch value="dataItem.IsRemoveLoss"></vr-switch>
