--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleSpecialRequestDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleSpecialRequestDirective.html
@@ -19,7 +19,7 @@
                         <vr-textbox value="dataItem.NumberOfTries" type="number" decimalprecision="0" minvalue="1" isrequired></vr-textbox>
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Percentage'">
-                        <vr-textbox value="dataItem.Percentage" type="number" minvalue="0" maxvalue="100"></vr-textbox>
+                        <vr-textbox value="dataItem.Percentage" type="number" decimalprecision="0" minvalue="0" maxvalue="100"></vr-textbox>
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Force Option'">
                         <vr-switch value="dataItem.ForceOption"></vr-switch>
