--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteDetailTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteDetailTemplate.html
@@ -21,7 +21,7 @@
             </vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Status'" type="'Text'" field="'SupplierStatus'" widthfactor="1"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Supplier Rate'" type="'Number'" field="'Entity.SupplierRate'" numberprecision="'LongPrecision'" widthfactor="3"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Percentage'" type="'Number'" field="'Entity.Percentage'" widthfactor="3"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Percentage'" type="'Number'" numberprecision="'NoDecimal'" field="'Entity.Percentage'" widthfactor="3"></vr-datagridcolumn>
         </vr-datagrid>
     </vr-columns>
 </vr-row>
