--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteDetailTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteDetailTemplate.html
@@ -11,13 +11,13 @@
             <vr-datagridcolumn headertext="'Supplier Code'" field="'SupplierCode'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Supplier Zone'" field="'SupplierZoneName'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Supplier Rate'" field="'SupplierRate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Percentage'">{{dataItem.Percentage}}<span ng-if="dataItem.Percentage">%</span></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Percentage'" type="'Number'" numberprecision="'NoDecimal'" field="'Percentage'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Services'" disablesorting="true">
                 <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
             </vr-datagridcolumn>
 
             <vr-datagridcolumn headertext="'Blocked'" field="'IsBlocked'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Linked Rules'" field="'LinkedRouteOptionRuleCount'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Linked Rules'" type="'Number'" numberprecision="'NoDecimal'" field="'LinkedRouteOptionRuleCount'"></vr-datagridcolumn>
         </vr-datagrid>
     </vr-columns>
 </vr-row>
