--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Views/TelesSiteEditor.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Views/TelesSiteEditor.html
@@ -12,10 +12,13 @@
                             <vr-textbox label="Centrex FeatSet" value="scopeModel.centrexFeatSet" isrequired="true"></vr-textbox>
                         </vr-columns>
                         <vr-columns width="1/3row" ng-if="scopeModel.useTemplate">
-                            <vr-textbox label="Template Name" value="scopeModel.templateName" isrequired="true"></vr-textbox>
+                            <vr-common-genericlkupitem-selector on-ready="scopeModel.onTelesTemplateSelectorReady"
+                                                                customlabel="Teles Template"
+                                                                isrequired="true"
+                                                                selectedvalues="scopeModel.selectedTelesTemplate"></vr-common-genericlkupitem-selector>
                         </vr-columns>
 
-</vr-row>
+                    </vr-row>
                     <vr-section title="Site Settings" >
                         <vr-row>
                             <vr-columns width="1/3row">
