--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/DataRecordFieldFormulas/Templates/GatewayEvaluatorFieldFormulaTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/DataRecordFieldFormulas/Templates/GatewayEvaluatorFieldFormulaTemplate.html
@@ -2,9 +2,19 @@
     <vr-select datasource="fields"
                datatextfield="fieldTitle"
                datavaluefield="fieldName"
-               selectedvalues="selectedFieldName"
-               entityname="Field Name"
-               isrequired="true"
-               label="Port Field Name">
+               selectedvalues="selectedSwitchFieldName"
+               entityname="Switch Field Name"
+               label="Switch Field Name"
+               isrequired="true" hideremoveicon>
+    </vr-select>
+</vr-columns>
+<vr-columns width="1/3row">
+    <vr-select datasource="fields"
+               datatextfield="fieldTitle"
+               datavaluefield="fieldName"
+               selectedvalues="selectedPortFieldName"
+               entityname="Port Field Name"
+               label="Port Field Name"
+               isrequired="true" hideremoveicon>
     </vr-select>
 </vr-columns>
