--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleLCRDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleLCRDirective.html
@@ -3,7 +3,7 @@
         <vr-columns width="1/3row">
             <vr-whs-be-carrieraccount-selector on-ready="scopeModel.onCarrierAccountDirectiveReady" selectedvalues="scopeModel.selectedSuppliers"
                                                onselectitem="scopeModel.onSelectSupplier" ondeselectitem="scopeModel.onDeselectSupplier"
-                                               ismultipleselection getsuppliers>
+                                               customlabel="Excluded Suppliers" ismultipleselection getsuppliers>
             </vr-whs-be-carrieraccount-selector>
         </vr-columns>
         <vr-columns width="2/3row" simplecol ng-show="false">
