add Max password length option in password security settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43247

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Settings/Templates/PasswordSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Settings/Templates/PasswordSettingsTemplate.html
@@ -1,6 +1,9 @@
 ﻿<vr-row>
     <vr-columns width="1/2row">
-        <vr-textbox value="scopeModel.passwordLength" type="number" minvalue="1" decimalprecision="0" isrequired="true" label="Password Length"></vr-textbox>
+        <vr-textbox value="scopeModel.passwordLength" type="number" minvalue="1" decimalprecision="0" isrequired="true" label="Min Password Length" customvalidate="scopeModel.passwordValueCustomValidation()"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/2row">
+        <vr-textbox value="scopeModel.maxPasswordLength" type="number" minvalue="1" decimalprecision="0" isrequired="true" label="Max Password Length" customvalidate="scopeModel.passwordValueCustomValidation()"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/2row">
         <vr-sec-passwordcomplexity-selector on-ready="scopeModel.onPasswordComplexitySelectorReady"></vr-sec-passwordcomplexity-selector>
