Editing TelesIdbSWSync UI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43257

--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/TelesSynchronizer/Templates/TelesIdbSWSyncTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/MainExtensions/TelesSynchronizer/Templates/TelesIdbSWSyncTemplate.html
@@ -15,6 +15,6 @@
 </vr-row>
 <vr-row>
     <vr-column width="fullrow">
-        <whs-routesync-carrieraccountmapping-telesidb-grid on-ready="scopeModel.onTelesIdbCarrierAccountMappingGridReady" context="scopeModel.context"></whs-routesync-carrieraccountmapping-telesidb-grid>
+        <whs-routesync-carrieraccountmapping-telesidb-grid on-ready="scopeModel.onTelesIdbCarrierAccountMappingGridReady"></whs-routesync-carrieraccountmapping-telesidb-grid>
     </vr-column>
 </vr-row>
