refactoring tiles and implementing column width
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43267

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTile/VRTileManagement.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTile/VRTileManagement.html
@@ -1,9 +1,9 @@
 ﻿<vr-panel ng-controller="VRCommon_VRTileManagementController">
     <vr-form name="formFilter">
         <vr-row ng-if="scopeModel.vrTiles.length > 0">
-                <vr-columns ng-repeat="vrTile in scopeModel.vrTiles" colnum="4" tileitem>
-                    <vr-directivewrapper directive="vrTile.runtimeEditor" title="vrTile.name" index="$index" on-ready="vrTile.onVRTileDirectiveReady"></vr-directivewrapper>
-                </vr-columns>
+            <vr-columns ng-repeat="vrTile in scopeModel.vrTiles" colnum="{{vrTile.columnWidth}}" tileitem>
+                <vr-directivewrapper directive="vrTile.runtimeEditor" title="vrTile.name" index="$index" on-ready="vrTile.onVRTileDirectiveReady"></vr-directivewrapper>
+            </vr-columns>
         </vr-row>
     </vr-form>
 </vr-panel>
