--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRTile/Templates/VRTileEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRTile/Templates/VRTileEditor.html
@@ -7,6 +7,9 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.tileName" label="Name" isrequired="true"></vr-textbox>
                         </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-select datasource="scopeModel.columnWidth" datatextfield="description" datavaluefield="value" hideremoveicon label="Column Width" selectedvalues="scopeModel.selectedColumnWidth" isrequired hidefilterbox></vr-select>
+                        </vr-columns>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Settings'">
