--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/Adapter/Templates/AdapterSFTPTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/Adapter/Templates/AdapterSFTPTemplate.html
@@ -28,7 +28,13 @@
         <vr-textbox value="lastImportedFile" label="Last Imported File" />
     </vr-columns>
     <vr-columns width="1/3row">
-        <vr-select datasource="actionsAfterImport" datatextfield="name" datavaluefield="value" label="Action After Import" selectedvalues="selectedAction" isrequired ="actionIsRequired()"></vr-select>
+        <vr-switch label="Compressed" value="compressed"></vr-switch>
+    </vr-columns>
+    <vr-columns width="1/3row" ng-show="compressed">
+        <vr-select datasource="compressionTypes" datatextfield="description" datavaluefield="value" label="Compression Type" selectedvalues="selectedCompressionType" isrequired="compressed"></vr-select>
+    </vr-columns>
+    <vr-columns width="1/3row">
+        <vr-select datasource="actionsAfterImport" datatextfield="name" datavaluefield="value" label="Action After Import" selectedvalues="selectedAction" isrequired="actionIsRequired()"></vr-select>
     </vr-columns>
     <vr-columns width="1/3row">
         <vr-textbox ng-show="selectedAction.value == 2" value="directorytoMoveFile" label="Directory to Move File" />
