--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SalePriceListTemplate/Templates/BasicSalePriceListTemplateSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SalePriceListTemplate/Templates/BasicSalePriceListTemplateSettingsTemplate.html
@@ -13,36 +13,41 @@
         </vr-columns>
 
         <vr-columns width="1/2row">
-            <vr-section title="Mapped Tables">
-                <vr-row>
-                    <vr-whs-be-salepricelisttemplate-mappedtable-selective normal-col-num="6"
-                                                                           on-ready="scopeModel.onMappedTableDirectiveReady"
-                                                                           label="Mapped Table"
-                                                                           isrequired>
-                    </vr-whs-be-salepricelisttemplate-mappedtable-selective>
-                    <vr-columns width="1/4row" withemptyline>
-                        <vr-button type="Add" data-onclick="scopeModel.addMappedTable" standalone="true" vr-disabled="scopeModel.disableAddMappedTable()"></vr-button>
-                    </vr-columns>
+            <vr-tabs>
+                <vr-tab header="'Mapped Tables'">
+                    <vr-row>
+                        <vr-whs-be-salepricelisttemplate-mappedtable-selective normal-col-num="6"
+                                                                               on-ready="scopeModel.onMappedTableDirectiveReady"
+                                                                               label="Mapped Table"
+                                                                               isrequired>
+                        </vr-whs-be-salepricelisttemplate-mappedtable-selective>
+                        <vr-columns width="1/4row" withemptyline>
+                            <vr-button type="Add" data-onclick="scopeModel.addMappedTable" standalone="true" vr-disabled="scopeModel.disableAddMappedTable()"></vr-button>
+                        </vr-columns>
 
-                </vr-row>
+                    </vr-row>
 
-                <vr-row>
-                    <vr-tabs on-ready="scopeModel.onTabsReady">
-                        <vr-tab ng-repeat="table in scopeModel.tables" header="table.header" onremove="scopeModel.removeTable" data="table">
-                            <vr-directivewrapper on-ready="table.onDirectiveReady"
-                                                 directive="table.Editor"
-                                                 normal-col-num="{{selectiveCtrl.normalColNum}}"
-                                                 isrequired="selectiveCtrl.isrequired">
-                            </vr-directivewrapper>
-                        </vr-tab>
-                    </vr-tabs>
-                </vr-row>
-                <vr-row>
-                    <vr-columns colnum="{{basicSettingsCtrl.normalColNum * 2}}">
-                        <vr-textbox label="Date Time Format" value="scopeModel.dateTimeFormat" isrequired="true"></vr-textbox>
-                    </vr-columns>
-                </vr-row>
-            </vr-section>
+                    <vr-row>
+                        <vr-tabs on-ready="scopeModel.onTabsReady">
+                            <vr-tab ng-repeat="table in scopeModel.tables" header="table.header" onremove="scopeModel.removeTable" data="table">
+                                <vr-directivewrapper on-ready="table.onDirectiveReady"
+                                                     directive="table.Editor"
+                                                     normal-col-num="{{selectiveCtrl.normalColNum}}"
+                                                     isrequired="selectiveCtrl.isrequired">
+                                </vr-directivewrapper>
+                            </vr-tab>
+                        </vr-tabs>
+                    </vr-row>
+                    <vr-row>
+                        <vr-columns colnum="{{basicSettingsCtrl.normalColNum * 2}}">
+                            <vr-textbox label="Date Time Format" value="scopeModel.dateTimeFormat" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+                <vr-tab header="'Mapped Cells'">
+                    <vr-whs-be-pricelisttemplate-mappedcells on-ready="scopeModel.onMappedCellsReady"></vr-whs-be-pricelisttemplate-mappedcells>
+                </vr-tab>
+            </vr-tabs>
         </vr-columns>
     </vr-row>
 </div>
