--- a/CarrierPortal/Code/CP.MultiNet.Web/CP_MultiNet/Elements/AccountAdditionalInfo/Directives/Templates/AccountAdditionalInfoTileRuntimeSettings.html
+++ b/CarrierPortal/Code/CP.MultiNet.Web/CP_MultiNet/Elements/AccountAdditionalInfo/Directives/Templates/AccountAdditionalInfoTileRuntimeSettings.html
@@ -1,98 +1,88 @@
 ﻿<vr-section title="{{scopeModel.tileTitle}}" ng-if="scopeModel.accountAdditionalInfo.MultiNetCompanyInfo  != undefined">
     <vr-row>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Type:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.AccountType}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.AccountType}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>CNIC:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.CNIC}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.CNIC}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
-            <vr-label>CNIC Expiry Date:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.CNICExpiryDate}}</vr-label>
+        <vr-columns width="1/2row">
+            <vr-label>CNIC Exp:</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.FormatedCNICExpiryDate}}</vr-label>
         </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Site ID:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.GPSiteID}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.GPSiteID}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>NTN:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.NTN}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetCompanyInfo.NTN}}</vr-label>
         </vr-columns>
     </vr-row>
 </vr-section>
 <vr-section title="{{scopeModel.tileTitle}}" ng-if="scopeModel.accountAdditionalInfo.MultiNetBranchInfo  != undefined">
     <vr-row>
-        <vr-columns width="1/3row">
-            <vr-label>AccountType:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.AccountType}}</vr-label>
+        <vr-columns width="1/2row">
+            <vr-label>Account Type:</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.AccountType}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Assigned Number:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.AssignedNumber}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.AssignedNumber}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Billing Address:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.BillingAddress}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.BillingAddress}}</vr-label>
         </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Branch Code:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.BranchCode}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.BranchCode}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>CNIC:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.CNIC}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.CNIC}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
-            <vr-label>CNIC Expiry Date:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.CNICExpiryDate}}</vr-label>
+        <vr-columns width="1/2row">
+            <vr-label>CNIC Exp:</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.FormatedCNICExpiryDate}}</vr-label>
         </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Home Address:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.HomeAddress}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.HomeAddress}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>NTN:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.NTN}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.NTN}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Office Address:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.OfficeAddress}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.OfficeAddress}}</vr-label>
         </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>PIN:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.PIN}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.PIN}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Passport Number:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.PassportNumber}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.PassportNumber}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Ref Number:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.RefNumber}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.RefNumber}}</vr-label>
         </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="1/3row">
-            <vr-label>Registration Number:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.RegistrationNumber}}</vr-label>
+        <vr-columns width="1/2row">
+            <vr-label>Reg. Number:</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.RegistrationNumber}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
+        <vr-columns width="1/2row">
             <vr-label>Technical Address:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.TechnicalAddress}}</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.TechnicalAddress}}</vr-label>
         </vr-columns>
-        <vr-columns width="1/3row">
-            <vr-label>Contract Reference Number:</vr-label>
-            <vr-label isvalue>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.ContractReferenceNumber}}</vr-label>
+        <vr-columns width="1/2row">
+            <vr-label>Reference Number:</vr-label>
+            <vr-label isvalue breakline>{{scopeModel.accountAdditionalInfo.MultiNetBranchInfo.ContractReferenceNumber}}</vr-label>
         </vr-columns>
     </vr-row>
 </vr-section>
